--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.6.1",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.2",
     "node-schedule": "^2.1.1",
-    "puppeteer": "^23.3.0"
+    "puppeteer": "^23.3.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
