--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd backend && npm start", 
-    "client": "cd frontend && npm run dev" 
+    "server": "cd backend && npm start",
+    "client": "cd frontend && npm run dev"
   },
   "devDependencies": {
     "concurrently": "^9.0.1"
+  },
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2"
   }
 }
