--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "node-schedule": "^2.1.1",
     "puppeteer": "^23.3.0",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
