--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-status-monitor": "^1.3.4",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.1",
+    "morgan": "^1.10.0",
     "node-schedule": "^2.1.1",
     "puppeteer": "^23.3.0",
     "puppeteer-extra": "^3.3.6",
