--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest --detectOpenHandles",
+    "userController.test.js": "cross-env NODE_ENV=test jest userController.test.js --detectOpenHandles",
+    "jobController.test.js": "cross-env NODE_ENV=test jest jobController.test.js --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +22,7 @@
     "express-status-monitor": "^1.3.4",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.6.3",
+    "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.1",
     "puppeteer": "^23.3.0",
@@ -29,6 +31,10 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.1",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   }
 }
