--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --detectOpenHandles",
-    "userController.test.js": "cross-env NODE_ENV=test jest userController.test.js --detectOpenHandles",
-    "jobController.test.js": "cross-env NODE_ENV=test jest jobController.test.js --detectOpenHandles"
+    "test:userController": "cross-env NODE_ENV=test jest userController.test.js --detectOpenHandles",
+    "test:jobController": "cross-env NODE_ENV=test jest jobController.test.js --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -36,5 +36,12 @@
     "mongodb-memory-server": "^10.0.1",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0"
+  },
+  "overrides": {
+    "glob": "10.4.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
   }
 }
