--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --detectOpenHandles",
-    "test:userController": "cross-env NODE_ENV=test jest userController.test.js --detectOpenHandles",
-    "test:jobController": "cross-env NODE_ENV=test jest jobController.test.js --detectOpenHandles"
+    "usercontrollertest": "cross-env NODE_ENV=test jest userController.test.js --detectOpenHandles",
+    "jobcontrollertest": "cross-env NODE_ENV=test jest jobController.test.js --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
