--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "jwt-decode": "^4.0.0",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
