--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^9.0.1"
   },
   "dependencies": {
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "lottie-web": "^5.12.2"
   }
 }
