--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.441.0",
