--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "openai": "^4.67.1",
     "puppeteer": "^23.3.0",
