--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.5.4",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
