--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
-    "lottie-web": "^5.12.2"
+    "lottie-web": "^5.12.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
