--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
     "lottie-web": "^5.12.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "styled-components": "^6.1.13"
   }
 }
