--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "concurrently": "^9.0.1"
   },
   "dependencies": {
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "lottie-web": "^5.12.2",
     "multer": "^1.4.5-lts.1",
