--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Logs
 logs
 *.log
@@ -23,6 +22,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-=======
 node_modules/
->>>>>>> vietbe
+
+.env
